// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Button BlockButton smoke-test 1`] = `
<div style="margin: 1em; display: flex; gap: 20px;">
  <div style="max-width: 200px; width: 100%;">
    <button variant="standard"
            colortheme="primary"
            type="button"
            class="sc-hLclGa erOOOs"
    >
      Block Button
    </button>
  </div>
</div>
`;

exports[`Atoms/Button LargeOutlineButtons smoke-test 1`] = `
<div style="margin: 1em; display: flex; gap: 20px;">
  <button variant="outline"
          colortheme="primary"
          type="button"
          class="sc-hLclGa eeiCuf"
  >
    Primary
  </button>
  <button variant="outline"
          colortheme="secondary"
          type="button"
          class="sc-hLclGa eHpWOv"
  >
    Secondary
  </button>
</div>
`;

exports[`Atoms/Button LargeStandardButtons smoke-test 1`] = `
<div style="margin: 1em; display: flex; gap: 20px;">
  <button variant="standard"
          colortheme="primary"
          type="button"
          class="sc-hLclGa fiXdBi"
  >
    Primary
  </button>
  <button variant="standard"
          colortheme="secondary"
          type="button"
          class="sc-hLclGa jWKvye"
  >
    Secondary
  </button>
</div>
`;

exports[`Atoms/Button MenuButtonExample smoke-test 1`] = `
<div style="margin: 1em; display: flex; gap: 20px;">
  <button class="sc-dkjKgF iiHxSZ">
    <svg stroke="currentColor"
         fill="none"
         stroke-width="0"
         viewbox="0 0 24 24"
         height="20px"
         width="20px"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M2 6C2 5.44772 2.44772 5 3 5H21C21.5523 5 22 5.44772 22 6C22 6.55228 21.5523 7 21 7H3C2.44772 7 2 6.55228 2 6Z"
            fill="currentColor"
      >
      </path>
      <path d="M2 12.0322C2 11.4799 2.44772 11.0322 3 11.0322H21C21.5523 11.0322 22 11.4799 22 12.0322C22 12.5845 21.5523 13.0322 21 13.0322H3C2.44772 13.0322 2 12.5845 2 12.0322Z"
            fill="currentColor"
      >
      </path>
      <path d="M3 17.0645C2.44772 17.0645 2 17.5122 2 18.0645C2 18.6167 2.44772 19.0645 3 19.0645H21C21.5523 19.0645 22 18.6167 22 18.0645C22 17.5122 21.5523 17.0645 21 17.0645H3Z"
            fill="currentColor"
      >
      </path>
    </svg>
  </button>
</div>
`;

exports[`Atoms/Button OutlineButtons smoke-test 1`] = `
<div style="margin: 1em; display: flex; gap: 20px;">
  <button variant="outline"
          colortheme="primary"
          type="button"
          class="sc-hLclGa kMBCXK"
  >
    Primary
  </button>
  <button variant="outline"
          colortheme="secondary"
          type="button"
          class="sc-hLclGa cYUcwG"
  >
    Secondary
  </button>
</div>
`;

exports[`Atoms/Button SmallOutlineButtons smoke-test 1`] = `
<div style="margin: 1em; display: flex; gap: 20px;">
  <button variant="outline"
          colortheme="primary"
          type="button"
          class="sc-hLclGa keduQX"
  >
    Primary
  </button>
  <button variant="outline"
          colortheme="secondary"
          type="button"
          class="sc-hLclGa eNYRZn"
  >
    Secondary
  </button>
</div>
`;

exports[`Atoms/Button SmallStandardButtons smoke-test 1`] = `
<div style="margin: 1em; display: flex; gap: 20px;">
  <button variant="standard"
          colortheme="primary"
          type="button"
          class="sc-hLclGa dZkWcq"
  >
    Primary
  </button>
  <button variant="standard"
          colortheme="secondary"
          type="button"
          class="sc-hLclGa bLrldS"
  >
    Secondary
  </button>
</div>
`;

exports[`Atoms/Button SortButtonAllVariants smoke-test 1`] = `
<div style="margin: 1em; display: flex; gap: 20px;">
  <button class="sc-grXZZQ kImwcT">
    <span>
      Article Title
    </span>
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 320 512"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z">
      </path>
    </svg>
  </button>
  <button class="sc-grXZZQ gggWLR">
    <span>
      Article Title Active
    </span>
    <svg stroke="currentColor"
         fill="currentColor"
         stroke-width="0"
         viewbox="0 0 320 512"
         height="1em"
         width="1em"
         xmlns="http://www.w3.org/2000/svg"
    >
      <path d="M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41zm255-105L177 64c-9.4-9.4-24.6-9.4-33.9 0L24 183c-15.1 15.1-4.4 41 17 41h238c21.4 0 32.1-25.9 17-41z">
      </path>
    </svg>
  </button>
</div>
`;

exports[`Atoms/Button StandardButtons smoke-test 1`] = `
<div style="margin: 1em; display: flex; gap: 20px;">
  <button variant="standard"
          colortheme="primary"
          type="button"
          class="sc-hLclGa dhTwVn"
  >
    Primary
  </button>
  <button variant="standard"
          colortheme="secondary"
          type="button"
          class="sc-hLclGa foIDLL"
  >
    Secondary
  </button>
</div>
`;
